--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "embla-carousel-react": "8.5.1",
     "express": "^5.1.0",
     "express-session": "^1.18.2",
+    "formidable": "^3.5.4",
     "framer-motion": "^12.23.12",
     "geist": "^1.3.1",
     "input-otp": "1.4.1",
@@ -72,6 +73,7 @@
     "rehype-raw": "^6.1.1",
     "rehype-sanitize": "^5.0.1",
     "remark-gfm": "^3.0.1",
+    "resend": "^6.1.2",
     "sonner": "^1.7.4",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
@@ -80,6 +82,7 @@
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.9",
+    "@types/formidable": "^3.4.5",
     "@types/node": "^22.18.0",
     "@types/react": "^19",
     "@types/react-dom": "^19",
